interpreter/examples/bad/type/function1.dl
{
    function f(x) return x,
    int y.
    y = f(f)
}
